# Android-NDK-JNI-Project

My CPP Project/MyCPPProject/: settings.gradle.kts
My CPP Project/MyCPPProject/app/: build.gradle.kts
My CPP Project/MyCPPProject/app/src/androidTest/java/com/development/mycppproject/: ExampleInstrumentedTest.kt
My CPP Project/MyCPPProject/app/src/main/: AndroidManifest.xml
My CPP Project/MyCPPProject/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
My CPP Project/MyCPPProject/app/src/main/cpp/includes/: StudentManager.h
My CPP Project/MyCPPProject/app/src/main/cpp/src/: StudentManager.cpp
My CPP Project/MyCPPProject/app/src/main/java/com/development/mycppproject/: MainActivity.kt
My CPP Project/MyCPPProject/app/src/main/res/layout/: activity_main.xml
My CPP Project/MyCPPProject/app/src/main/res/values/: strings.xml
My CPP Project/MyCPPProject/app/src/test/java/com/development/mycppproject/: ExampleUnitTest.kt
My CPP Project/MyCPPProject/gradle/wrapper/: gradle-wrapper.properties
MyTrainTicket/app/src/main/cpp/: CMakeLists.txt  TicketLogic.cpp  TicketLogic.h  native-lib.cpp
MyTrainTicket/app/src/main/java/com/development/mytrainticket/: MainActivity.kt
MyTrainTicket/app/src/main/res/layout/: activity_main.xml
MyTrainTicket/gradle/wrapper/: gradle-wrapper.properties
